--- a/pokedex-project/style.css
+++ b/pokedex-project/style.css
@@ -382,7 +382,74 @@ body {
     aspect-ratio: 2 / 1;
     background-color: var(--cards-green);
     margin-top: 15px;
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    gap: 20px;
+    padding: 10px;
+    align-items: center;
 }
+
+.card {
+    flex: 0 0 calc((100% - 100px) / 3);
+    scroll-snap-align: center;
+    border-radius: var(--border-radius-default);
+    background-color: var(--card-bg, #333);
+    color: var(--white);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    font-size: 1.25em;
+    border-radius: 5px;
+    height: auto;
+    padding: 10px;
+}
+
+.card:hover {
+    cursor: pointer;
+}
+
+.top-nav-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.pokemon-name-display {
+    text-transform: capitalize;
+}
+
+.card-img {
+    width: 100%;
+}
+
+.pokemon-img-wrapper {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: var(--card-padding);
+    margin-bottom: var(--card-padding);
+}
+
+.type-img {
+    width: 45%;
+}
+
+.card-content {
+    width: 100%;
+    text-align: center;
+}
+
+.types-container {
+    display: flex;
+    width: 100%;
+    gap: 8px;
+    justify-content: center;
+}
+
 
 .pokemons-select {
     width: 95%;
