--- a/pokedex-project/style.css
+++ b/pokedex-project/style.css
@@ -895,7 +895,7 @@ body {
     margin-bottom: 20px;
 }
 
-.svg-chart-1, .svg-chart-2, .svg-chart-3{
+.svg-chart-1, .svg-chart-3{
     width: 100%;
     height: auto;
     background-color: rgb(49, 49, 49);
@@ -905,6 +905,18 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+.svg-chart-2 {
+    width: 100%;
+    height: auto;
+    background-color: rgb(49, 49, 49);
+    border-radius: 10px;
+    border: 1px solid rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row; 
 }
 
 /* --- Authors Page --- */
