--- a/pokedex-project/style.css
+++ b/pokedex-project/style.css
@@ -640,7 +640,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
 }
 
 .pokemons-search {
@@ -882,7 +881,7 @@ body {
     width: 55%;
 }
 
-.svg-pai-chart-1, .svg-pai-chart-2, .svg-pai-chart-3{
+.svg-pai-chart-1, .svg-pai-chart-2{
     width: 90%;
     height: auto;
     background-color: #1b1b1b;
@@ -896,7 +895,7 @@ body {
     margin-bottom: 20px;
 }
 
-.svg-chart-1, .svg-chart-3{
+.svg-chart-1{
     width: 100%;
     height: auto;
     background-color: rgb(49, 49, 49);
