--- a/pokedex-project/style.css
+++ b/pokedex-project/style.css
@@ -387,15 +387,16 @@ body {
     height: 45%;
     background-color: var(--light-gray-border);
     display: flex;
-    overflow-x: auto;
+    overflow-x: hidden;
     scroll-snap-type: x mandatory;
     gap: 15px;
     padding: 20px;
     align-items: center;
+    pointer-events: none;
 }
 
 .card {
-    flex: 0 0 calc((100% - 80px) / 3);
+    flex: 0 0 calc((100% - 92px) / 3);
     scroll-snap-align: center;
     border-radius: var(--border-radius-default);
     background-color: var(--card-bg, #333);
@@ -409,6 +410,7 @@ body {
     height: auto;
     padding: 10px;
     border: var(--white) solid 2px;
+    pointer-events: auto;
 }
 
 .card:hover {
