--- a/pokedex-project/style.css
+++ b/pokedex-project/style.css
@@ -283,13 +283,21 @@ body {
     background-color: var(--pokedex-strong-color);
 }
 
-.map-left-screen {
+.real-map-container {
     width: 82.5%;
     height: 85%;
     background-color: var(--screen-medium-gray);
     border-radius: var(--screen-border-radius);
     box-sizing: border-box;
     padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.map-left-screen{
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
